--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express-validator": "^6.9.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.11",
+    "request": "^2.79.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
